Bug 1187178 - Use MOZ_WINSDK_MAXVER instead of #ifndef. r=jimm